--- a/app/i18n/dictionaries/en.json
+++ b/app/i18n/dictionaries/en.json
@@ -29,8 +29,8 @@
     "teamSubtitle": "The passionate minds behind Geekshive",
     "team": {
       "francisco": {
-        "title": "Founder & CEO",
-        "desc": "Founder and CEO responsible for global strategy, growth, and operational performance across the US and LATAM.",
+        "title": "Chief Executive Officer",
+        "desc": "CEO responsible for global strategy, growth, and operational performance across the US and LATAM.",
         "focus": "Strategy · Performance · Growth"
       },
       "joaquin": {
