--- a/app/i18n/dictionaries/es.json
+++ b/app/i18n/dictionaries/es.json
@@ -29,8 +29,8 @@
     "teamSubtitle": "Las mentes apasionadas detrás de Geekshive",
     "team": {
       "francisco": {
-        "title": "Fundador & CEO",
-        "desc": "Fundador y CEO responsable de la estrategia global, crecimiento y performance operacional en Estados Unidos y LATAM.",
+        "title": "Chief Executive Officer",
+        "desc": "CEO responsable de la estrategia global, crecimiento y performance operacional en Estados Unidos y LATAM.",
         "focus": "Estrategia · Performance · Crecimiento"
       },
       "joaquin": {
